# docs/swagger.json
@@ -20,7 +20,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/shorturl.UrlCreateRequest"
+                            "$ref": "#/definitions/entity.ShortUrlCreateRequest"
                         }
                     }
                 ],
@@ -30,7 +30,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/entity.JSONResult"
+                                    "$ref": "#/definitions/entity.ResultJSON"
                                 },
                                 {
                                     "type": "object",
@@ -39,7 +39,7 @@
                                             "type": "integer"
                                         },
                                         "data": {
-                                            "$ref": "#/definitions/shorturl.UrlCreateResponse"
+                                            "$ref": "#/definitions/entity.ShortUrlCreateResponse"
                                         },
                                         "message": {
                                             "type": "string"
@@ -54,7 +54,7 @@
         }
     },
     "definitions": {
-        "entity.JSONResult": {
+        "entity.ResultJSON": {
             "type": "object",
             "properties": {
                 "code": {
@@ -66,7 +66,7 @@
                 }
             }
         },
-        "shorturl.UrlCreateRequest": {
+        "entity.ShortUrlCreateRequest": {
             "type": "object",
             "required": [
                 "url"
@@ -85,7 +85,7 @@
                 }
             }
         },
-        "shorturl.UrlCreateResponse": {
+        "entity.ShortUrlCreateResponse": {
             "type": "object",
             "properties": {
                 "url": {
